--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,199 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:rowCount="4"
-    android:columnCount="4"
-    android:orientation="horizontal" >
-</GridLayout>
+    android:orientation="vertical"
+    android:layout_marginTop="@dimen/buttonWidth"
+    android:layout_gravity="center">
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/a0"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/a1"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/a2"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/a3"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/a4"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/b0"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/b1"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/b2"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/b3"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/b4"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/c0"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/c1"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/c2"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/c3"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/c4"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/d0"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/d1"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/d2"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/d3"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/d4"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/e0"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/e1"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/e2"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/e3"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/e4"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonWidth"
+            android:background="@color/colorLightOff"
+            android:layout_margin="2dp"/>
+
+    </LinearLayout>
+
+</LinearLayout>
