--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,31 +16,31 @@
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
         <Button
             android:id="@+id/a1"
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
         <Button
             android:id="@+id/a2"
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
         <Button
             android:id="@+id/a3"
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
         <Button
             android:id="@+id/a4"
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
 
     </LinearLayout>
 
@@ -54,31 +54,31 @@
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
         <Button
             android:id="@+id/b1"
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
         <Button
             android:id="@+id/b2"
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
         <Button
             android:id="@+id/b3"
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
         <Button
             android:id="@+id/b4"
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
 
     </LinearLayout>
 
@@ -92,31 +92,31 @@
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
         <Button
             android:id="@+id/c1"
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
         <Button
             android:id="@+id/c2"
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
         <Button
             android:id="@+id/c3"
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
         <Button
             android:id="@+id/c4"
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
 
     </LinearLayout>
 
@@ -130,31 +130,31 @@
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
         <Button
             android:id="@+id/d1"
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
         <Button
             android:id="@+id/d2"
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
         <Button
             android:id="@+id/d3"
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
         <Button
             android:id="@+id/d4"
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
 
     </LinearLayout>
 
@@ -168,31 +168,31 @@
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
         <Button
             android:id="@+id/e1"
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
         <Button
             android:id="@+id/e2"
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
         <Button
             android:id="@+id/e3"
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
         <Button
             android:id="@+id/e4"
             android:layout_width="@dimen/buttonWidth"
             android:layout_height="@dimen/buttonWidth"
             android:background="@color/colorLightOff"
-            android:layout_margin="2dp"/>
+            android:layout_margin="@dimen/buttonSpacing"/>
 
     </LinearLayout>
 
