--- a/app/src/main/res/layout/start_screen.xml
+++ b/app/src/main/res/layout/start_screen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,27 +9,32 @@
         android:id="@+id/gameTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp"
+        android:fontFamily="serif"
         android:text="@string/game_title"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/buttonWidth"
-        android:textSize="60dp"
-        android:fontFamily="serif" />
+        android:textSize="60dp" />
 
     <TextView
         android:id="@+id/gameDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/game_description"
-        android:layout_marginTop="20dp"
+        android:layout_alignEnd="@+id/gameTitle"
+        android:layout_alignRight="@+id/gameTitle"
+        android:layout_centerVertical="true"
         android:layout_gravity="center_horizontal"
-        android:textSize="20dp"
-        android:fontFamily="serif" />
+        android:fontFamily="serif"
+        android:text="@string/game_description"
+        android:textSize="20dp" />
 
     <Button
         android:id="@+id/startGameButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="150dp"
+        android:layout_marginBottom="40dp"
         android:text="@string/start_game_button_text" />
-</LinearLayout>
+</RelativeLayout>
