Extract all dimensions to dimensions file

--- a/app/src/main/res/layout/activity_end_game.xml
+++ b/app/src/main/res/layout/activity_end_game.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="@dimen/winning_text_margin_top"
         android:text="@string/winning_text"
         android:textSize="@dimen/textHeaderFontSize"/>
 
