--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -3,4 +3,9 @@
     <dimen name="buttonWidth">50dp</dimen>
     <dimen name="buttonSpacing">2dp</dimen>
     <dimen name="textHeaderFontSize">30sp</dimen>
+    <dimen name="winning_text_margin_top">70dp</dimen>
+    <dimen name="header_font_size">60sp</dimen>
+    <dimen name="tagline_font_size">20sp</dimen>
+    <dimen name="start_button_bottom_margin">40dp</dimen>
+    <dimen name="title_text_margin_top">70dp</dimen>
 </resources>
