--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -8,4 +8,6 @@
     <dimen name="tagline_font_size">20sp</dimen>
     <dimen name="start_button_bottom_margin">40dp</dimen>
     <dimen name="title_text_margin_top">70dp</dimen>
+    <dimen name="stats_margin_left">20dp</dimen>
+    <dimen name="stats_margin_top">5dp</dimen>
 </resources>
