Implement start over button, code cleanup

--- a/app/src/main/res/layout/activity_end_game.xml
+++ b/app/src/main/res/layout/activity_end_game.xml
@@ -32,7 +32,7 @@
         android:text="numberToBeatTextView"/>
 
     <Button
-        android:id="@+id/startGameButton"
+        android:id="@+id/startOverButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
